crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_points_to_sugar_non_pointer.rs
fn rejects_points_to_sugar_non_pointer() {
    let x = 42i32;

    unsafe {
        //@ raw assert *x |-> Option::Some(42i32);
        let _keep = x;
    }
}

fn main() {}
